Working on engine part

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,7 +56,10 @@ ELSE ()
 	FIND_PACKAGE(SFML 2 REQUIRED COMPONENTS audio graphics system window)
 ENDIF ()
 
+FIND_PACKAGE(Kunlaboro REQUIRED)
+
 INCLUDE_DIRECTORIES(
+	${KUNLABORO_INCLUDE_DIR}
 	${SFML_INCLUDE_DIR}
 	${CMAKE_CURRENT_SOURCE_DIR}/Source
 )
