Forgot to link Kunlaboro

--- a/Source/Base/CMakeLists.txt
+++ b/Source/Base/CMakeLists.txt
@@ -27,7 +27,7 @@ IF (NOT WIN32 AND NOT APPLE)
 ENDIF()
 
 ADD_LIBRARY(LD33_Base STATIC ${Headers} ${Sources})
-TARGET_LINK_LIBRARIES(LD33_Base ${SFML_LIBRARIES})
+TARGET_LINK_LIBRARIES(LD33_Base ${KUNLABORO_LIBRARIES} ${SFML_LIBRARIES})
 
 IF (NOT WIN32 AND NOT APPLE)
     TARGET_LINK_LIBRARIES(LD33_Base ${FONTCONFIG_LIBRARIES})
